force-app/main/default/objects/Contract/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <formula>TEXT(Opportunity__r.Contact__r.Contact_Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Role</label>
    <type>Text</type>
</CustomField>