force-app/main/default/objects/Contract/fields/ContactComptabilite__c.field-meta.xml
<CustomField>
        <fullName>ContactComptabilite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Personne qui reçoit les factures et relevé de factures</inlineHelpText>
        <label>Contact comptabilité</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts (Contact comptabilité)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
</CustomField>