force-app/main/default/objects/Contract/fields/Corporate_Agreement_Code__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Agreement_Code__c</fullName>
    <label>Corporate Agreement Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>