force-app/main/default/objects/Contract/fields/Corporate_Code__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Code__c</fullName>
    <label>Corporate Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>