force-app/main/default/objects/Contract/fields/End_validity_date__c.field-meta.xml
<CustomField>
    <fullName>End_validity_date__c</fullName>
    <label>End validity date</label>
    <type>Date</type>
</CustomField>