force-app/main/default/objects/Contract/fields/fromSalesforce__c.field-meta.xml
<CustomField>
    <fullName>fromSalesforce__c</fullName>
    <defaultValue>true</defaultValue>
    <label>fromSalesforce</label>
    <type>Checkbox</type>
</CustomField>