force-app/main/default/objects/Contract/fields/Loge_Card_Expiration_date__c.field-meta.xml
<CustomField>
    <fullName>Loge_Card_Expiration_date__c</fullName>
    <label>Loge Card Expiration date</label>
    <type>Date</type>
</CustomField>