force-app/main/default/objects/Contract/fields/Option_Date__c.field-meta.xml
<CustomField>
    <fullName>Option_Date__c</fullName>
    <label>Option Date</label>
    <type>Date</type>
</CustomField>