force-app/main/default/objects/Contract/fields/Renewal_date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_date__c</fullName>
    <label>Renewal date</label>
    <type>Date</type>
</CustomField>