force-app/main/default/objects/Contract/fields/Restart_Date__c.field-meta.xml
<CustomField>
    <fullName>Restart_Date__c</fullName>
    <label>Restart Date</label>
    <type>Date</type>
</CustomField>