force-app/main/default/objects/Contract/recordTypes/Carte_Log_e.recordType-meta.xml
<RecordType>
    <fullName>Carte_Log_e</fullName>
    <active>true</active>
    <description>Record type for loge card</description>
    <label>Carte Logée</label>
</RecordType>