force-app/main/default/objects/Contract/recordTypes/Corporate.recordType-meta.xml
<RecordType>
    <fullName>Corporate</fullName>
    <active>true</active>
    <description>Record type for corporate opportunity</description>
    <label>Corporate</label>
</RecordType>