force-app/main/default/objects/Contract/recordTypes/Group.recordType-meta.xml
<RecordType>
    <fullName>Group</fullName>
    <active>true</active>
    <description>Contract for Group Opportunities</description>
    <label>Group</label>
</RecordType>