force-app/main/default/objects/Contract/recordTypes/Leisure.recordType-meta.xml
<RecordType>
    <fullName>Leisure</fullName>
    <active>true</active>
    <label>Leisure</label>
</RecordType>