force-app/main/default/objects/Contract/recordTypes/Series.recordType-meta.xml
<RecordType>
    <fullName>Series</fullName>
    <active>true</active>
    <description>Record type for series contract</description>
    <label>Series</label>
</RecordType>