force-app/main/default/objects/Contract/validationRules/VR02_Contract_OptionDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_Contract_OptionDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$User.BypassValidationRule__c ,
Option_Date__c &gt;  EndDate
)</errorConditionFormula>
    <errorDisplayField>Option_Date__c</errorDisplayField>
    <errorMessage>Option Date should be smaller than End Date</errorMessage>
</ValidationRule>