force-app/main/default/objects/Contract/validationRules/VR03_Contract_RestartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR03_Contract_RestartDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$User.BypassValidationRule__c ,
Restart_Date__c &gt; EndDate
)</errorConditionFormula>
    <errorDisplayField>Restart_Date__c</errorDisplayField>
    <errorMessage>Restart Date should be smaller than End Date</errorMessage>
</ValidationRule>