force-app/main/default/objects/Contract/validationRules/VR05_CorporateCodeModification.validationRule-meta.xml
<ValidationRule>
    <fullName>VR05_CorporateCodeModification</fullName>
    <active>true</active>
    <description>The corporate code cannot be modified if the contract status is Activated or Expired</description>
    <errorConditionFormula>AND (ISCHANGED (Corporate_Code__c), 
OR(
 ISPICKVAL(Status, &apos;Activated&apos;),
 ISPICKVAL(Status, &apos;Expired&apos;)
)
)</errorConditionFormula>
    <errorDisplayField>Corporate_Code__c</errorDisplayField>
    <errorMessage>You cannot modify the corporate code</errorMessage>
</ValidationRule>