force-app/main/default/objects/Contract/validationRules/VR06_CarteLogeeNumberModification.validationRule-meta.xml
<ValidationRule>
    <fullName>VR06_CarteLogeeNumberModification</fullName>
    <active>true</active>
    <description>The carte logee number cannot be modified if the contract status is Activated or Expired</description>
    <errorConditionFormula>AND (ISCHANGED (Loge_Card_Number__c),
OR(
ISPICKVAL(Status, &apos;Activated&apos;),
ISPICKVAL(Status, &apos;Expired&apos;)
)
)</errorConditionFormula>
    <errorDisplayField>Loge_Card_Number__c</errorDisplayField>
    <errorMessage>You cannot modify the carte loge number</errorMessage>
</ValidationRule>