force-app/main/default/objects/Contract/validationRules/VR07_CoporateCodeNotNull.validationRule-meta.xml
<ValidationRule>
    <fullName>VR07_CoporateCodeNotNull</fullName>
    <active>true</active>
    <description>You should have the corporate code</description>
    <errorConditionFormula>AND(ISNULL( Corporate_Code__c ),RecordType.Name=&apos;Corporate&apos;)</errorConditionFormula>
    <errorMessage>You should have the corporate code</errorMessage>
</ValidationRule>