force-app/main/default/objects/Contract/listViews/Italian_contracts_CORPORATE.listView-meta.xml
<ListView>
    <fullName>Italian_contracts_CORPORATE</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.RECORDTYPE</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CONTRACT.ACTIVATED_BY</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>contains</operation>
        <value>cangrande,carboni,bibas,di mauro,redaelli,schiaffonati,perri</value>
    </filters>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract.Corporate</value>
    </filters>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Draft,In Approval Process,Activated</value>
    </filters>
    <label>Italian contracts CORPORATE</label>
    <sharedTo>
        <role>Italy</role>
    </sharedTo>
</ListView>